# RAG-Pipeline

./: .gitignore  README.md  SPEC.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ecc2a515b09_create_documents_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: documents.py  health.py  query.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: document.py
backend/app/schemas/: document.py
backend/app/services/ingestion/: chunker.py  parser.py  pipeline.py
backend/app/services/ingestion/parsers/: docx.py  pdf.py  txt.py
backend/app/services/retrieval/: embedder.py  vector_store.py
backend/tests/integration/: test_ingestion_pipeline.py
backend/tests/unit/: test_chunker.py  test_parsers.py
docs/: INGESTION.md
